[package]
name = "krun-server"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bpaf = { workspace = true, features = [] }
env_logger = { workspace = true, features = ["auto-color", "humantime", "unstable-kv"] }
log = { workspace = true, features = ["kv"] }
nix = { workspace = true, features = ["socket"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utils = { workspace = true, features = [] }

[features]
default = []
