[package]
name = "krun"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bpaf = { workspace = true, features = [] }
env_logger = { workspace = true, features = ["auto-color", "humantime", "unstable-kv"] }
krun-sys = { workspace = true, features = [] }
log = { workspace = true, features = ["kv"] }
nix = { workspace = true, features = ["user"] }
rustix = { workspace = true, features = ["process", "std", "use-libc-auxv"] }
serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = ["std"] }
utils = { workspace = true, features = [] }

[features]
default = []
