[package]
name = "krun"
version = "0.1.0"
authors = ["Sergio Lopez <slp@redhat.com>", "Teoh Han Hui <teohhanhui@gmail.com>"]
edition = "2021"
rust-version = "1.77.0"
description = "Run programs from your system in a microVM"
repository = "https://github.com/slp/krun"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.82", default-features = false, features = ["std"] }
bpaf = { version = "0.9.11", default-features = false, features = [] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime", "unstable-kv"] }
futures-util = "0.3.30"
krun-sys = { path = "../krun-sys", version = "1.9.1", default-features = false, features = [] }
log = { version = "0.4.21", default-features = false, features = ["kv"] }
nix = { version = "0.28.0", default-features = false, features = ["user"] }
regex = { version = "1.10.6" }
rustix = { version = "0.38.34", default-features = false, features = ["fs", "mount", "process", "std", "system", "use-libc-auxv"] }
rtnetlink = { version = "0.14.1" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false, features = ["std"] }
tempfile = { version = "3.10.1", default-features = false, features = [] }
tokio = { version = "1.38.0", default-features = false, features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", default-features = false, features = ["net", "sync"] }
uuid = { version = "1.10.0", default-features = false, features = ["std", "v7"] }

[features]
default = []

[[bin]]
name = "krun"
path = "src/bin/krun.rs"

[[bin]]
name = "krun-guest"
path = "src/guest/bin/krun-guest.rs"

[[bin]]
name = "krun-server"
path = "src/server/bin/krun-server.rs"
