[package]
name = "utils"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["std"] }
rustix = { workspace = true, features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
