[package]
name = "utils"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
